# gst-test

./: build-flatpak.sh  com.hack_computer.gst-test.json  meson.build
data/: com.hack_computer.gst-test.appdata.xml.in  com.hack_computer.gst-test.desktop.in  com.hack_computer.gst-test.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: com.hack_computer.gst-test.data.gresource.xml  com.hack_computer.gst-test.src.gresource.xml  lib.c  lib.h  main.js  meson.build  playbin.js  window.js  window.ui
